WebmMuxer: handle zero-sized encoded frame in OnEncodedVideo()

This CL teaches WebmMuxer to ignore zero-sized encoded frames in
WebmMuxer::OnEncodedVideo(), because these are produced sporadically
by the openh264 encoder.

Bug: 716451
Change-Id: I06261320e1bc6a7042dc7c6a6917115e6ba5e51a
Reviewed-on: https://chromium-review.googlesource.com/514412
Reviewed-by: Emircan Uysaler <emircan@chromium.org>
Commit-Queue: Miguel Casas <mcasas@chromium.org>
Cr-Commit-Position: refs/heads/master@{#474668}
Former-commit-id: d70bf910b3b5ee3bfe5afe95031044bfff6523ff